--- a/index.html
+++ b/index.html
@@ -644,8 +644,9 @@ async function fetchBikeLockStateFromBle() {
   try {
     console.log("Requesting bike lock data...");
     const value = await bleQueue.enqueue(() => bikeLockCharacteristic.readValue());
+    value = new Int8Array(value.buffer)[0];
     console.log(value);
-    const boolValue = new Int8Array(value.buffer)[0] === 0 ? false: true;
+    const boolValue = value[0] === 0 ? false: true;
     bikeLockStatus = boolValue;
     updateButtonColor();
   } catch (error) {
