--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     }
     .container {
       padding: 10px;
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
     }
     .connectionContainer {
        display: flex;
